--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
 
 install: 
   - pip install -r requirements.txt
+  - pip install pytest-cov
+  - pip install coveralls
 
 script:
-  - pytest
+  - pytest --cov
+after_success:
+  - coveralls
